@@ -24,6 +24,8 @@ Version 2.1
 
 - Updated autopygmentize script (PR#445)
 
+- Fixed style inheritance for non-standard token types in HTML output.
+
 
 Version 2.0.3
 -------------
